# pennyworth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic.yml  lint.yml  lint_and_test.yml  nightly_lint.yml
modules/: Cargo.toml
modules/freedesktop/: .gitignore  Cargo.toml  README.md
modules/freedesktop/src/: desktop_entry.rs  lib.rs  parse.rs
modules/freedesktop/test_files/entries/: test_app.desktop  test_link.desktop
modules/freedesktop/tests/: entry_types.rs  lib.rs
modules/freedesktop_entry_parser/: Cargo.toml
modules/freedesktop_entry_parser/test_files/entries/: test_directory.desktop  test_invalid_entry_type.desktop
modules/freedesktop_entry_parser/tests/: entry_types.rs  lib.rs
modules/src/: launcher.rs  lib.rs  sql_client.rs  timestamp.rs
src/: errors.rs  main.rs  module.rs
src/modules/: mod.rs  timestamp.rs
src/text_input/: cursor.rs  editor.rs  mod.rs  value.rs
widgets/: Cargo.toml
widgets/src/: cursor.rs  editor.rs  lib.rs  text_input.rs
