[package]
name = "pennyworth"
version = "0.1.0"
authors = ["WilliamHammond <william.t.hammond@gmail.com>"]
edition = "2018"

[dependencies]
iced = "0.3"
iced_native = "0.4"
iced_graphics = "0.2"
iced_wgpu = "0.4.0"
iced_core = "0.4.0"
iced_style = "0.3.0"
chrono = "0.4"
log = "0.4"
simple_logger = "1.11.0"
unicode-segmentation = "1.6"
