[package]
name = "widgets"
version = "0.1.0"
authors = ["WilliamHammond <william.t.hammond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_native = "0.4"
iced_graphics = "0.2"
iced_wgpu = "0.4.0"
iced_core = "0.4.0"
iced_style = "0.3.0"
unicode-segmentation = "1.6"
